--- a/autos/src/App.css
+++ b/autos/src/App.css
@@ -3,40 +3,76 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  color: #b16464;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
 }
 
 .card {
-  padding: 2em;
+  
+  padding: 10px;
+  width: 240px;
+  text-align: center;
+  background-color: rgb(247, 247, 247);
+  border-radius: 5px;
+ 
+ 
 }
 
-.read-the-docs {
-  color: #888;
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card h2 {
+  font-size: 20px;
+  margin: 10px 0;
+  font-weight: bold; /* Agrega negritas a los títulos */
+  color: #000000; /* Cambia el color de los títulos */
+}
+
+.card p {
+  font-size: 16px;
+  margin: 5px 0; /* Ajusta los márgenes de los párrafos */
+}
+
+/* Estilo de los botones */
+.btnLike,
+.btnElim {
+  color: #fff;
+  background-color: rgb(5, 23, 59);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 16px;
+  transition: background-color 0.2s, transform 0.2s;
+}
+
+.btnLike:hover {
+  background-color: #ffffff;
+  transform: scale(1.1);
+}
+
+.btnElim:hover {
+  background-color: #000000;
+}
+
+.imgCard {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.card:not(:last-child) {
+  margin-right: 20px;
+}
+
+.btnLike span {
+  font-weight: bold;
 }
